# field-kit

./: .gitignore  LICENSE  README.md
match-bot/: LICENSE  README.md  build_gui.bat  match_bot.spec  pyproject.toml  requirements.txt
match-bot/.claude/skills/generate-report/: SKILL.md
match-bot/.claude/skills/run-matching/: SKILL.md
match-bot/.claude/skills/suggest-matches/: SKILL.md
match-bot/.claude/skills/update-table/: SKILL.md
match-bot/dev/prompts/: prompt_001_boundary_analysis.md
match-bot/examples/: sample_config.yaml
match-bot/examples/demo/: config.yaml  reference.csv  target.csv
match-bot/gazetteer/: README.md  countries.csv
match-bot/gazetteer/scripts/: build_geonames.py  build_osm.py  download_boundaries.sh  download_pbf.sh  merge.py  retag_admin.py
match-bot/match_bot/: __init__.py  __main__.py
match-bot/match_bot/core/: __init__.py  config.py  data_loader.py  fuzzy.py  lookup.py  matching.py  reporting.py  standardization.py
match-bot/match_bot/gui/: __init__.py  app.py  builder.py
match-bot/match_bot/gui/static/: style.css
match-bot/match_bot/gui/templates/: base.html  index.html
match-bot/match_bot/scripts/: __init__.py  generate_lookups.py  run_matching.py  suggest_matches.py
matchbox/: README.md
provision/: README.md  config.default.json  gather.js  package-lock.json  package.json
provision/countries/: BEN.json  example-benin.json
provision/lib/: fetch-boundaries.js  fetch-buildings.js  fetch-land-use.js  fetch-osm.js  fetch-population.js  fetch-roads.js  utils.js
provision/scripts/: download-overture-buildings.py
python/: pyproject.toml
python/crosscut_public.egg-info/: PKG-INFO  SOURCES.txt
python/spatial/: README.md  __init__.py  contiguity.py  geometry.py
python/tests/: conftest.py  test_contiguity.py
