[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "crosscut-public"
version = "0.1.0"
description = "Open-source algorithms for geospatial health campaign planning"
license = "MIT"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
include = ["spatial*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
